--- a/diabetes model.ipynb
+++ b/diabetes model.ipynb
@@ -20,9 +20,8 @@
     "from imblearn.over_sampling import RandomOverSampler\n",
     "import pickle\n",
     "import numpy as np\n",
-    "from sklearn.metrics import f1_score, confusion_matrix, roc_auc_score, accuracy_score\n",
+    "from sklearn.metrics import accuracy_score\n",
     "from scipy.stats import zscore\n",
-    "from sklearn.ensemble import VotingClassifier\n",
     "from sklearn.base import BaseEstimator, ClassifierMixin\n",
     "from collections import Counter\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
