--- a/diabetes model.ipynb
+++ b/diabetes model.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on Test Set: 0.8441558441558441\n"
+      "Accuracy on Test Set: 0.8441558441558441\n",
+      "F1 Score: 0.8459448714550755\n",
+      "Precision: 0.850370147247935\n",
+      "Recall: 0.8441558441558441\n",
+      "Confusion Matrix:\n",
+      " [[86 15]\n",
+      " [ 9 44]]\n"
      ]
     }
    ],
@@ -20,7 +26,7 @@
     "from imblearn.over_sampling import RandomOverSampler\n",
     "import pickle\n",
     "import numpy as np\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score, confusion_matrix\n",
     "from scipy.stats import zscore\n",
     "from sklearn.base import BaseEstimator, ClassifierMixin\n",
     "from collections import Counter\n",
@@ -187,6 +193,17 @@
     "accuracy_test = accuracy_score(y_test, voting_preds_test)\n",
     "\n",
     "print(\"Accuracy on Test Set:\", accuracy_test)\n",
+    "\n",
+    "# Calculate F1 score, precision, recall, and confusion matrix\n",
+    "f1 = f1_score(y_test, voting_preds_test, average='weighted')\n",
+    "precision = precision_score(y_test, voting_preds_test, average='weighted')\n",
+    "recall = recall_score(y_test, voting_preds_test, average='weighted')\n",
+    "conf_matrix = confusion_matrix(y_test, voting_preds_test)\n",
+    "\n",
+    "print(\"F1 Score:\", f1)\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n",
+    "print(\"Confusion Matrix:\\n\", conf_matrix)\n",
     "\n",
     "# Save the model using pickle\n",
     "with open('hybrid_model.pkl', 'wb') as f:\n",
